# claudemo

./: CLAUDE.md  README.md  pyproject.toml
scripts/: show_qr.py
src/cable/: __init__.py  base10.py  cli.py  constants.py  device.py  qr.py
src/cable/crypto/: eid.py  kdf.py  noise.py
src/cable/transport/: ble.py  channel.py  tunnel.py
tests/: test_base10.py  test_channel.py  test_cli.py  test_device.py  test_eid.py  test_kdf.py  test_noise.py  test_qr.py  test_tunnel_framing.py
